<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context=".DetalleActivity2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/titulo"
                android:textSize="35dp"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:textStyle="bold">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:textSize="18dp"
                    android:layout_marginRight="5dp"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:id="@+id/tvNombrecompleto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18dp">
                </TextView>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaNacimiento"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/tvFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18dp"
                android:layout_marginTop="10dp">
            </TextView>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefono"
                    android:textSize="18dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:id="@+id/tvTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18dp"
                    android:layout_marginTop="10dp">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="18dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18dp"
                    android:layout_marginTop="10dp">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion"
                    android:textSize="18dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:id="@+id/tvDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18dp"
                    android:layout_marginTop="10dp">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btnEditar"
                    android:layout_width="198dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/editar" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>